results/SVCOMP/conversational/log-recursion2-2024_03_15_03_03_04.txt
class recursion2 {
  //@ ensures \result <==> recursion_test(0) == 10;
  public static boolean f() {
    return recursion_test(0) == 10;
  }

  //@ requires depth >= 0;
  //@ ensures \result == 0 ==> depth >= 10;
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) != 10);
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) == i + 1);
  static int recursion_test(int depth) {
    if (depth < 10) return recursion_test(depth + 1) + 1;
    else return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/recursion2.java:2: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> recursion_test(0) == 10;
                           ^
1 error

class recursion2 {
  //@ ensures \result <==> recursion_test(0) == 10;
  public static boolean f() {
    return recursion_test(0) == 10;
  }

  //@ requires depth >= 0;
  //@ ensures \result == 0 ==> depth >= 10;
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) != 10);
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) == i + 1);
  static int recursion_test(int depth) {
    if (depth < 10) return recursion_test(depth + 1) + 1;
    else return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/recursion2.java:2: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> recursion_test(0) == 10;
                           ^
1 error

class recursion2 {
  //@ ensures \result <==> recursion_test(0) == 10;
  public static boolean f() {
    return recursion_test(0) == 10;
  }

  //@ requires depth >= 0;
  //@ ensures \result == 0 ==> depth >= 10;
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) != 10);
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) == i + 1);
  static int recursion_test(int depth) {
    if (depth < 10) return recursion_test(depth + 1) + 1;
    else return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/recursion2.java:2: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> recursion_test(0) == 10;
                           ^
1 error

class recursion2 {
  //@ ensures \result <==> recursion_test(0) == 10;
  public static boolean f() {
    return recursion_test(0) == 10;
  }

  //@ requires depth >= 0;
  //@ ensures \result == 0 ==> depth >= 10;
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) != 10);
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) == i + 1);
  static int recursion_test(int depth) {
    if (depth < 10) return recursion_test(depth + 1) + 1;
    else return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/recursion2.java:2: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> recursion_test(0) == 10;
                           ^
1 error

class recursion2 {
  //@ ensures \result <==> recursion_test(0) == 10;
  public static boolean f() {
    return recursion_test(0) == 10;
  }

  //@ requires depth >= 0;
  //@ ensures \result == 0 ==> depth >= 10;
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) != 10);
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) == i + 1);
  static int recursion_test(int depth) {
    if (depth < 10) return recursion_test(depth + 1) + 1;
    else return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/recursion2.java:2: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> recursion_test(0) == 10;
                           ^
1 error

class recursion2 {
  //@ ensures \result <==> recursion_test(0) == 10;
  public static boolean f() {
    return recursion_test(0) == 10;
  }

  //@ requires depth >= 0;
  //@ ensures \result == 0 ==> depth >= 10;
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) != 10);
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) == i + 1);
  static int recursion_test(int depth) {
    if (depth < 10) return recursion_test(depth + 1) + 1;
    else return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/recursion2.java:2: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> recursion_test(0) == 10;
                           ^
1 error

class recursion2 {
  //@ ensures \result <==> recursion_test(0) == 10;
  public static boolean f() {
    return recursion_test(0) == 10;
  }

  //@ requires depth >= 0;
  //@ ensures \result == 0 ==> depth >= 10;
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) != 10);
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) == i + 1);
  static int recursion_test(int depth) {
    if (depth < 10) return recursion_test(depth + 1) + 1;
    else return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/recursion2.java:2: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> recursion_test(0) == 10;
                           ^
1 error

class recursion2 {
  //@ ensures \result <==> recursion_test(0) == 10;
  public static boolean f() {
    return recursion_test(0) == 10;
  }

  //@ requires depth >= 0;
  //@ ensures \result == 0 ==> depth >= 10;
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) != 10);
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) == i + 1);
  static int recursion_test(int depth) {
    if (depth < 10) return recursion_test(depth + 1) + 1;
    else return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/recursion2.java:2: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> recursion_test(0) == 10;
                           ^
1 error

class recursion2 {
  //@ ensures \result <==> recursion_test(0) == 10;
  public static boolean f() {
    return recursion_test(0) == 10;
  }

  //@ requires depth >= 0;
  //@ ensures \result == 0 ==> depth >= 10;
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) != 10);
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) == i + 1);
  static int recursion_test(int depth) {
    if (depth < 10) return recursion_test(depth + 1) + 1;
    else return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/recursion2.java:2: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> recursion_test(0) == 10;
                           ^
1 error

class recursion2 {
  //@ ensures \result <==> recursion_test(0) == 10;
  public static boolean f() {
    return recursion_test(0) == 10;
  }

  //@ requires depth >= 0;
  //@ ensures \result == 0 ==> depth >= 10;
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) != 10);
  //@ ensures \result == 0 ==> (\forall int i; 0 <= i && i < depth; recursion_test(i) == i + 1);
  static int recursion_test(int depth) {
    if (depth < 10) return recursion_test(depth + 1) + 1;
    else return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/recursion2.java:2: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> recursion_test(0) == 10;
                           ^
1 error

